2003-10-03  Richard Dawe  <rich@phekda.freeserve.co.uk>  (tiny change)

	* tests/defs.in: For required=runtest, check that we are using
	a DejaGnu that supports specifying the program on the command-line.

2003-10-03  Alexandre Duret-Lutz  <adl@gnu.org>

	For Debian Bug #213524:
	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Merge
	stderr and stdout, and grep only the first line while testing
	install-info --version's output.  This revert part of the change
	from 2001-05-18.

2003-10-01  Akim Demaille  <akim@epita.fr>

	* m4/amversion.in: Add (C) to the Copyright notice.

2003-10-01  Paul Eggert  <eggert@twinsun.com>

	* lib/Automake/XFile.pm: Use Errno.
	(lock): Ignore ENOLCK errors.  Problem reported Andreas Schwab in
	<http://mail.gnu.org/archive/html/bug-autoconf/2003-09/msg00141.html>.

2003-09-30  Tom Tromey  <tromey@redhat.com>

	* lib/Automake/Options.pm (_process_option_list): Recognize
	no-dist.
	* NEWS: Update.
	* doc/automake.texi (Options): Document no-dist.
	* automake.in (check_cygnus): Set no-dist option.
	(handle_dist): Recognize no-dist.
	* tests/nodist3.test: New file.
	* tests/Makefile.am (TESTS): Added nodist3.test.

2003-09-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_clean): Take $makefile as argument, and
	define %MAKEFILE% while processing clean.am.
	(generate_makefile): Pass $makefile to handle_clean.
	* lib/am/clean.am (distclean, maintainer-clean): Erase %MAKEFILE%,
	not Makefile.
	* tests/gnumake.test: New file.
	* tests/Makefile.am (TESTS): Add gnumake.test.
	Report from Braden N. McDaniel.

2003-09-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Scripts): Update the example about automake.
	Mention `dist_' for distributed scripts.

	* lib/mkinstalldirs: Clean up after NextStep and OpenStep mkdir.
	Suggested by Eric Sunshine.

2003-09-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* README: More mailing lists.

	* NEWS: Mention the switch to GNU FDL for the manual.
