@@ -111,6 +111,7 @@ Juergen Keil		jk@tools.de
 Karl Berry		kb@cs.umb.edu
 Karl Heuer		kwzh@gnu.org
 Kevin Dalley		kevin@aimnet.com
+Kevin P. Fleming.	kpfleming@cox.net
 Kevin Ryde		user42@zip.com.au
 Kevin Street		street@iname.com
 Klaus Reichl		Klaus.Reichl@alcatel.at
