@@ -2360,8 +2360,11 @@ sub handle_ltlibraries
 
       # Check that the library fits the standard naming convention.
       my $libname_rx = "^lib.*\.la";
-      my $ldvar = var ("${xlib}_LDFLAGS") || var ('LDFLAGS');
-      if ($ldvar && grep (/-module/, $ldvar->value_as_list_recursive ('all')))
+      my $ldvar = var ("${xlib}_LDFLAGS") || var ('AM_LDFLAGS');
+      my $ldvar2 = var ('LDFLAGS');
+      if (($ldvar && grep (/-module/, $ldvar->value_as_list_recursive ('all')))
+	  || ($ldvar2
+	      && grep (/-module/, $ldvar2->value_as_list_recursive ('all'))))
 	{
 	  # Relax name checking for libtool modules.
 	  $libname_rx = "\.la";
