@@ -1,4 +1,4 @@
-@set UPDATED 26 September 2003
+@set UPDATED 30 September 2003
 @set UPDATED-MONTH September 2003
 @set EDITION 1.7a
 @set VERSION 1.7a
