@@ -1,3 +1,10 @@
+2003-10-06  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (handle_ltlibraries): Also grep AM_LDFLAGS for `-module'.
+	* tests/stdlib2.test: New file.
+	* tests/Makefile.am (TESTS): Add stdlib2.test.
+	Report from Kevin P. Fleming.
+
 2003-10-03  Richard Dawe  <rich@phekda.freeserve.co.uk>  (tiny change)
 
 	* tests/defs.in: For required=runtest, check that we are using
